--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="shortcut icon" href="favicon.png" type="image/png"> 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-      <title>Wedding Invitation | Nov 18 | Sengunthar Mahal, Erode</title>
+      <title>Wedding Invitation</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
       <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
@@ -24,7 +24,13 @@
             <h1>Dharanidaran</h1>
             <h3>Are getting married</h3>
             <p>
-               on <span class="date">18 November 2023</span></29>, At <span class="place">Sengunthar Mahal</span> Erode, Tamil Nadu                
+               on <span class="date">19 November 2023</span></29>, Time: 4.30 AM to 6.00 AM                 
+            </p>
+            <p>
+               Reception: <span class="date">18 November 2023</span></29>, Time: 6.00 PM to 9.00 PM                
+            </p>
+            <p>
+               At <span class="place">Sengunthar Mahal</span> Erode, Tamil Nadu                 
             </p>
          </div>
       </div>
@@ -36,7 +42,7 @@
         <a href="https://maps.app.goo.gl/QRxNoRaF4MCwTYzZA" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="https://github.com/vinitshahdeo/vinitshahdeo/raw/master/docs/Sonali%20%26%20Gagan.pdf" download="Invitation | 18 Nov | Hope to see you there!">
+        <a href="https://github.com/vinitshahdeo/vinitshahdeo/raw/master/docs/Sonali%20%26%20Gagan.pdf" download="Invitation | 19 Nov | Hope to see you there!">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
