--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="https://maps.app.goo.gl/QRxNoRaF4MCwTYzZA" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="https://github.com/daran6255/daran6255.github.io/blob/4780f630b822616a44b3bde505d2dd4d6a255369/invitation/Swetha%26Dharanidaran-Marriage_Invitation.pdf" download="Invitation | 19 Nov | Hope to see you there!">
+        <a href="https://github.com/daran6255/daran6255.github.io/raw/main/invitation/swetha_dharanidaran.pdf" download="Invitation | 19 Nov | Hope to see you there!">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
